@@ -2,6 +2,7 @@
 # copyright notices and license terms.
 import datetime
 from decimal import Decimal
+from functools import wraps
 
 from trytond.model import Workflow, ModelView, ModelSQL, fields, \
     sequence_ordered
@@ -57,6 +58,7 @@ class Statement(Workflow, ModelSQL, ModelView):
     state = fields.Selection([
             ('draft', 'Draft'),
             ('confirmed', 'Confirmed'),
+            ('done', 'Done'),
             ('canceled', 'Canceled'),
             ], 'State', required=True, readonly=True)
 
@@ -67,6 +69,8 @@ class Statement(Workflow, ModelSQL, ModelView):
         cls._transitions |= set((
                 ('draft', 'confirmed'),
                 ('confirmed', 'canceled'),
+                ('confirmed', 'done'),
+                ('done', 'confirmed'),
                 ('canceled', 'draft'),
                 ('draft', 'canceled'),
                 ))
@@ -80,7 +84,7 @@ class Statement(Workflow, ModelSQL, ModelView):
                     'icon': 'tryton-clear',
                     },
                 'cancel': {
-                    'invisible': Eval('state').in_(['canceled']),
+                    'invisible': Eval('state').in_(['done', 'canceled']),
                     'icon': 'tryton-cancel',
                     },
                 })
@@ -131,7 +135,14 @@ class Statement(Workflow, ModelSQL, ModelView):
         lines = []
         for statement in statements:
             lines += statement.lines
-        StatementLine.confirm(lines)
+        with Transaction().set_context(from_statement=True):
+            StatementLine.confirm(lines)
+
+    @classmethod
+    @ModelView.button
+    @Workflow.transition('done')
+    def done(cls, statements):
+        pass
 
     @classmethod
     @ModelView.button
@@ -147,7 +158,8 @@ class Statement(Workflow, ModelSQL, ModelView):
                         'state': line.state,
                     })
             lines += statement.lines
-        StatementLine.cancel(lines)
+        with Transaction().set_context(from_statement=True):
+            StatementLine.cancel(lines)
 
     @classmethod
     @ModelView.button
@@ -157,7 +169,8 @@ class Statement(Workflow, ModelSQL, ModelView):
         lines = []
         for statement in statements:
             lines += statement.lines
-        StatementLine.cancel(lines)
+        with Transaction().set_context(from_statement=True):
+            StatementLine.cancel(lines)
 
     @classmethod
     def delete(cls, statements):
@@ -177,6 +190,40 @@ class Statement(Workflow, ModelSQL, ModelView):
 
         if st_lines:
             StatementLine.search_reconcile(st_lines)
+
+    @property
+    def is_done(self):
+        if any(l.state not in ('posted', 'canceled') for l in self.lines):
+            return False
+        return True
+
+    @classmethod
+    def update_statement_state(cls, statements):
+        to_confirm, to_done = [], []
+        for statement in statements:
+            if statement.state not in ('confirmed', 'done'):
+                continue
+            if statement.is_done and statement.state != 'done':
+                to_done.append(statement)
+            if not statement.is_done and statement.state != 'confirmed':
+                to_confirm.append(statement)
+        if to_confirm:
+            cls.confirm(to_confirm)
+        if to_done:
+            cls.done(to_done)
+
+
+def process_statements(func):
+    @wraps(func)
+    def wrapper(cls, records, *args, **kwargs):
+        pool = Pool()
+        Statement = pool.get('account.bank.statement')
+        result = func(cls, records, *args, **kwargs)
+        if not Transaction().context.get('from_statement', False):
+            Statement.update_statement_state(
+                list({l.statement for l in records}))
+        return result
+    return wrapper
 
 
 class StatementLine(sequence_ordered(), Workflow, ModelSQL, ModelView):
@@ -388,24 +435,28 @@ class StatementLine(sequence_ordered(), Workflow, ModelSQL, ModelView):
 
     @classmethod
     @ModelView.button
+    @process_statements
     @Workflow.transition('confirmed')
     def confirm(cls, lines):
         pass
 
     @classmethod
     @ModelView.button
+    @process_statements
     @Workflow.transition('posted')
     def post(cls, lines):
         pass
 
     @classmethod
     @ModelView.button
+    @process_statements
     @Workflow.transition('draft')
     def draft(cls, lines):
         pass
 
     @classmethod
     @ModelView.button
+    @process_statements
     @Workflow.transition('canceled')
     def cancel(cls, lines):
         Line = Pool().get('account.bank.reconciliation')
