@@ -1,3 +1,5 @@
+* Add done state to statments
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 
